dnl
dnl  $Id: configure.in,v 1.1 1999-11-16 03:41:16 tmwilson Exp $
dnl
dnl  $Log: not supported by cvs2svn $
dnl
dnl  This file is part of Advanced Strategic Command; http://www.asc-hq.de
dnl    Copyright (C) 1994-1999  Martin Bickel  and  Marc Schellenberger
dnl
dnl  This program is free software; you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; either version 2 of the License, or
dnl  (at your option) any later version.
dnl
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl  GNU General Public License for more details.
dnl
dnl  You should have received a copy of the GNU General Public License
dnl  along with this program; if not, write to the Free Software
dnl  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
dnl
dnl

dnl Process this file with autoconf to produce a configure script.
AC_INIT(artint.h)
AM_INIT_AUTOMAKE(ACS, 0.1)
AM_CONFIG_HEADER(config.h)
dnl Checks for programs.

AC_ARG_PROGRAM
AC_PROG_CXX
CXXFLAGS="$CXXFLAGS -I./ -DHEXAGON -Dsgmain -DFREEMAPZOOM -funsigned-char"
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h strings.h sys/dirent.h)
AC_HEADER_DIRENT
AC_HEADER_TIME

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(select)
AC_CHECK_FUNCS(itoa)
AC_CHECK_FUNCS(stricmp)
AC_CHECK_FUNCS(kbhit)

AC_OUTPUT(Makefile, echo timestamp > stamp-h.in)
