## Process this file with automake to produce Makefile.in
######################################################################
## $Id: Makefile.am,v 1.5.2.1 2006-12-21 14:11:25 mbickel Exp $

MAINTAINERCLEANFILES	= Makefile.in

SUBDIRS			= lib linux

EXTRA_DIST = $(srcdir)/*.cpp $(srcdir)/*.h $(srcdir)/win/*.vcproj 