## Process this file with automake to produce Makefile.in
######################################################################
## $Id: Makefile.am,v 1.6 2007-04-13 16:16:09 mbickel Exp $

MAINTAINERCLEANFILES	= Makefile.in

SUBDIRS			= lib linux

EXTRA_DIST = $(srcdir)/*.cpp $(srcdir)/*.h $(srcdir)/win/*.vcproj 