## Process this file with automake to produce Makefile.in
######################################################################
## $Id: Makefile.am,v 1.7 2009-04-18 13:48:40 mbickel Exp $

MAINTAINERCLEANFILES	= Makefile.in

SUBDIRS			= lib linux

EXTRA_DIST = $(srcdir)/*.cpp $(srcdir)/*.h $(srcdir)/win/*.vcproj 