
MAINTAINERCLEANFILES	= Makefile.in

noinst_LTLIBRARIES 	= libloki.la

libloki_la_SOURCES	= SmallObj.cpp Singleton.cpp


EXTRA_DIST= $(srcdir)/*.h $(srcdir)/Reference/*.h   $(srcdir)/Borland/*.h   $(srcdir)/MSVC/1200/*.h   $(srcdir)/MSVC/1300/*.h  \
                          $(srcdir)/Reference/*.cpp $(srcdir)/Borland/*.cpp $(srcdir)/MSVC/1200/*.cpp $(srcdir)/MSVC/1300/*.cpp